--- a/dcs_sign_off/src/main/resources/application.properties
+++ b/dcs_sign_off/src/main/resources/application.properties
@@ -9,11 +9,13 @@ spring.mvc.static-path-pattern=/**
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/dcc?serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://192.168.123.51:3306/dcc?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+#spring.datasource.password=123
 
-server.servlet.session.timeout=360m
+server.servlet.session.timeout=10000000m
 
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
