逾期未完成事项跳转

--- a/dcs_sign_off/src/main/resources/application.properties
+++ b/dcs_sign_off/src/main/resources/application.properties
@@ -40,3 +40,17 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 spring.datasource.druid.filter.stat.enabled=true
 spring.datasource.druid.filter.stat.db-type=mysql
 spring.datasource.druid.filter.stat.log-slow-sql=true
+
+#暴露所有端点信息
+#management.endpoints.enabled-by-default=true
+#打开所有的监控点
+management.endpoints.web.exposure.include=*
+
+spring.application.name=Admin Client
+spring.boot.admin.client.url=http://localhost:8000
+
+info.app.name=dcc
+info.app.version= 1.0.0
+
+#以web方式暴露
+web.exposure.include='*'
