--- a/dcs_sign_off/src/main/resources/application.properties
+++ b/dcs_sign_off/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.mvc.static-path-pattern=/**
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dccdb?serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://192.168.123.51:3306/dccdb?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/dccdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.123.51:3306/dccdb?serverTimezone=UTC
 spring.datasource.username=root
-#spring.datasource.password=root
-spring.datasource.password=123
+spring.datasource.password=root
+#spring.datasource.password=123
 
 server.servlet.session.timeout=10000000m
 
@@ -41,16 +41,4 @@ spring.datasource.druid.filter.stat.enabled=true
 spring.datasource.druid.filter.stat.db-type=mysql
 spring.datasource.druid.filter.stat.log-slow-sql=true
 
-#暴露所有端点信息
-#management.endpoints.enabled-by-default=true
-#打开所有的监控点
-management.endpoints.web.exposure.include=*
 
-spring.application.name=Admin Client
-spring.boot.admin.client.url=http://localhost:8000
-
-info.app.name=dcc
-info.app.version= 1.0.0
-
-#以web方式暴露
-web.exposure.include='*'
